# cyber-pi

./: .env.example  .gitignore  .uvrc  AUTOMATION_COMPLETE.md  BRAND_IDENTITY.md  BUILD_SUMMARY.md  BYOK_HANDOFF.md  CLEANUP_PHASE1_COMPLETE.md  CLEANUP_READY.md  CODE_QUALITY_FIXES_COMPLETE.md  COLLECTION_SCHEDULE.md  COMPETITIVE_ANALYSIS_AND_DIFFERENTIATORS.md  COMPETITIVE_ANALYSIS_PART1.md  COMPETITIVE_ANALYSIS_PART2.md  COMPETITIVE_ANALYSIS_PART3.md  COMPETITIVE_DIFFERENTIATORS_IMPLEMENTATION.py  COMPETITIVE_STRATEGY_INDEX.md  COMPREHENSIVE_INTELLIGENCE_REPORT_SUMMARY.md  COMPREHENSIVE_STRESS_TESTING_COMPLETE.md  COMPREHENSIVE_TEST_REPORT.md  CRON_FIXES_COMPLETE.md  CVE_KNOWLEDGE_GRAPH_STRATEGY.md  DATA_COLLECTION_ENHANCEMENT_PLAN.md  DATA_COLLECTION_IMPLEMENTATION_COMPLETE.md  DATA_LOADERS_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DOCS_INDEX.md  E2E_VALIDATION_REPORT.md  ENRICHMENT_STRATEGY.md  EXECUTE_NUCLEAR_DEPLOYMENT.sh  FINAL_DELIVERY_SUMMARY.md  FINAL_SESSION_STATUS.md  FINAL_STATUS.md  FINANCIAL_INTELLIGENCE_COMPLETE.md  FINANCIAL_VALIDATION_PLAN.md  FORTUNE_1000_COVERAGE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE_INTELLIGENT_COLLECTION.md  (+113 more)
cyber-pi-intel/: .bandit  .gitignore  ARCHITECTURE.md  ARCHITECTURE_VERIFICATION.md  AUTOMATED_THREAT_HUNTING.md  AUTOMATION_ARCHITECTURE.md  AUTOMATION_DEPLOYED.md  COMPREHENSIVE_INTELLIGENCE_COLLECTION.md  DATA_IMPORT_REPORT.md  DEPLOYMENT_SUMMARY.md  E2E_TEST_RESULTS.md  EXPERT_ANALYSIS.md  IBKR_FINANCIAL_INTELLIGENCE.md  IBKR_PULL_REPORT.md  IBKR_TESTING_GUIDE.md  INGESTION_READY.md  ML_FINAL_STATUS.md  ML_PREDICTIONS_SUMMARY.md  NEO4J_ADVANCED_ANALYSIS.md  NEWSLETTER_INTEGRATION_STRATEGY.md  QUICK_START.md  README.md  RECOMMENDATIONS.md  REDIS_FIRST_ARCHITECTURE.md  SECURITY.md  SECURITY_CREDENTIALS.md  SECURITY_ENHANCEMENTS_COMPLETE.md  SECURITY_FIXES_APPLIED.md  SESSION_COMPLETE_OCT31.md  STIX_IMPLEMENTATION_COMPLETE.md  STIX_ONTOLOGY_INTEGRATION.md  THREAT_ANALYSIS_SUMMARY.md  THREAT_HUNTING_GUIDE.md  VALIDATION_REPORT.md  analyze_threats.py  automation_status.sh  clear_weaviate.py  final_verification.sh  ingest_local.sh  ingest_redis_first.py  (+20 more)
cyber-pi-intel/backend/: main.py  main_simple.py  test_routing_v4kafka.py
cyber-pi-intel/backend/api/: __init__.py  admin.py  health.py  knowledge.py  ml_endpoints.py  router.py  threat_intel_api.py
cyber-pi-intel/backend/core/: __init__.py  config.py  connections.py  schemas.py  stix_converter.py
cyber-pi-intel/backend/ml/: threat_predictor.py
cyber-pi-intel/backend/streaming/: __init__.py  kafka_consumer.py
cyber-pi-intel/collectors/: github_advisories_collector.py  ibkr_client_collector.py  ibkr_financial_intel.py  rss_collector.py
cyber-pi-intel/deployment/automation/: collection-cronjobs.yaml  hunting-cronjobs.yaml  hunting-dashboard-job.yaml  ibkr-collector-cronjob.yaml  test-cisa-collector.yaml  test-hunter.yaml
cyber-pi-intel/deployment/cyber-pi-simplified/: CREDENTIALS.md  DATABASE_SCHEMA.md  NGINX_GATEWAY_ARCHITECTURE.md  backend-api-deployment.yaml  clear-databases-job.yaml  deploy-all.sh  ingestion-job.yaml  initialize-all.sh  initialize-neo4j.py  initialize-weaviate-v4.py  initialize-weaviate.py  ml-deployment.yaml  namespace.yaml  neo4j-deployment.yaml  nginx-gateway.yaml  redis-bulk-load-job.yaml  redis-deployment.yaml  secrets.yaml  weaviate-deployment.yaml  worker-jobs.yaml
cyber-pi-intel/deployment/k8s/: deploy.sh  kustomization.yaml  namespace.yaml
cyber-pi-intel/hunters/: alert_processor.py  ransomware_monitor.py
cyber-pi-intel/k8s/: ollama-deployment.yaml
cyber-pi-intel/newsletters/: ALL_VERTICALS_STATUS.md  COMPLETION_STATUS.md  FINAL_STATUS_ALL_WORK.md  MASTER_INDEX_ALL_VERTICALS.md
cyber-pi-intel/newsletters/aviation/: week1_part1_executive.md  week1_parts_2_to_10_SUMMARY.md
cyber-pi-intel/newsletters/energy/: ALL_PARTS_STATUS.md  FINAL_PARTS_8_9_10.md  (+18 more)
cyber-pi-intel/workers/: neo4j_worker.py  stix_worker.py  weaviate_worker.py
(+254 files in other folders)
